2022-03-14  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r291206.
        https://bugs.webkit.org/show_bug.cgi?id=237829

        Introduced perf regression

        Reverted changeset:

        "Adjust when
        _setPrivacyProxyFailClosedForUnreachableNonMainHosts is
        called"
        https://bugs.webkit.org/show_bug.cgi?id=237735
        https://commits.webkit.org/r291206

2022-03-14  Kimmo Kinnunen  <kkinnunen@apple.com>

        WebGL context should use discrete gpu if the context is created when the window is on external monitor, ANGLE Metal backend
        https://bugs.webkit.org/show_bug.cgi?id=236487

        Reviewed by Kenneth Russell.

        Before, the ChromeClient passed PlatformDisplayID to the createGraphicsContextGL. This was ignored.
        After, pass the PlatformGPUID as part of GraphicsContextGLAttributes. 

        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::createGraphicsContextGL const):
        * WebProcess/WebCoreSupport/WebChromeClient.h:

2022-03-12  Simon Fraser  <simon.fraser@apple.com>

        In RemoteLayerBackingStore, group makeFrontBufferNonVolatile() and swapToValidFrontBuffer() into a single function
        https://bugs.webkit.org/show_bug.cgi?id=237806

        Reviewed by Tim Horton.

        As a step towards reducing the number of sync IPC calls when displaying layers, refactor
        code in RemoteLayerBackingStore so that we can do the makeFrontBufferNonVolatile()
        and swapToValidFrontBuffer() in a single function. Its return value indicates whether
        we need to do any display, or a full display.

        * Shared/RemoteLayerTree/RemoteLayerBackingStore.h:
        * Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
        (WebKit::operator<<):
        (WebKit::RemoteLayerBackingStore::prepareToDisplay):
        (WebKit::RemoteLayerBackingStore::prepareBuffers):