@@ -1,3 +1,15 @@
+2022-03-14  Alex Christensen  <achristensen@webkit.org>
+
+        Revert r290659
+        https://bugs.webkit.org/show_bug.cgi?id=237296
+
+        It caused a performance regression.
+
+        * NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
+        (WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):
+        * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
+        (WebKit::NetworkSessionCocoa::createWebSocketTask):
+
 2022-03-14  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r291206.
